Fix nav-links alignment

--- a/src/style.css
+++ b/src/style.css
@@ -35,6 +35,7 @@ body {
   padding: 0;
   margin: 0;
   font-size: 20px;
+  align-items: center;
 }
 
 li {
